el proyecto de los colegas tienen problemas

--- a/I. 03 Minería de Datos I/Proyecto/Vuelos.ipynb
+++ b/I. 03 Minería de Datos I/Proyecto/Vuelos.ipynb
@@ -107,7 +107,7 @@
    ],
    "source": [
     "vuelosTrain = pd.read_csv(\"vuelosTrain.csv\")\n",
-    "vuelosTest = pd.read_csv(\"vuelosTest.csv\")\n",
+    "#vuelosTest = pd.read_csv(\"vuelosTest.csv\")\n",
     "vuelosTrain.info()"
    ]
   },
