--- a/I. 03 Minería de Datos I/Proyecto/Proyecto - Association Rules.ipynb
+++ b/I. 03 Minería de Datos I/Proyecto/Proyecto - Association Rules.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/asrule.csv')"
+    "df = pd.read_csv('asrule.csv')"
    ]
   },
   {
